@@ -1,3 +1,13 @@
+2012-12-30  Russ Allbery  <rra@stanford.edu>
+
+	* ANSIColor.pm: Use coloralias to load aliases from the
+	environment.  Improve commenting in the SYNOPSIS.  Document the
+	new alias name restrictions.
+	(coloralias): New function to set a color alias.  Enforce
+	restrictions on the acceptable alias name.
+	* t/custom-env.t: Adjust warning test for new error message.
+	* t/custom-func.t: New test of coloralias.
+
 2012-12-29  Stephen Thirlwall  <stephen.thirlwall@strategicdata.com.au>
 	    Russ Allbery  <rra@stanford.edu>
 
